2015-07-16 修改样式：Redcarpet 扩展 smart & blockquote p 样式修改

--- a/css/codepiano.css
+++ b/css/codepiano.css
@@ -156,6 +156,11 @@ blockquote {
   color: #777;
 }
 
+blockquote p {
+  text-indent: 0;
+  text-align: justify;
+}
+
 blockquote paragraph {
   font-size: 16px;
   margin-left: 0em;
